cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 20)
project(battleships)
add_executable(battleships
    main.cpp
    Battleship.cpp
    Battleship.h
    BattleshipCell.cpp
    BattleshipCell.h
    Field.cpp
    Field.h
    FieldCell.cpp
    FieldCell.h
    ShipManager.cpp
    ShipManager.h
    skills/Shelling.cpp
    skills/Shelling.h
    skills/ShellingFactory.cpp
    skills/ShellingFactory.h
    skills/DoubleDamage.cpp
    skills/DoubleDamage.h
    skills/DoubleDamageFactory.cpp
    skills/DoubleDamageFactory.h
    skills/Scaner.cpp
    skills/Scaner.h
    skills/ScanerFactory.cpp
    skills/ScanerFactory.h
    skills/Skill.h
    skills/SkillFactory.h
    skills/SkillManager.h
    skills/SkillManager.cpp
    skills/SkillPrinter.h
    skills/SkillPrinter.cpp
    skills/SkillVisitor.h
    infoHolders/InfoHolder.h
    infoHolders/SkillInfoHolder.h
    infoHolders/SkillInfoHolder.cpp
    infoHolders/SkillResultInfoHolder.h
    infoHolders/SkillResultInfoHolder.cpp
    infoHolders/commandHolder.h
    infoHolders/commandHolder.cpp
    infoHolders/coordHolder.h
    infoHolders/coordHolder.cpp
    infoHolders/coordReader.h
    infoHolders/coordReader.cpp
    infoHolders/commandReader.cpp
    infoHolders/commandReader.h
    infoHolders/directionReader.h
    infoHolders/directionReader.cpp
    infoHolders/directionHolder.cpp
    infoHolders/directionHolder.h
    exceptions/NoneAvailableSkillsException.h
    exceptions/NoneAvailableSkillsException.cpp
    exceptions/OutOfBondsException.h
    exceptions/OutOfBondsException.cpp
    exceptions/ShipNearAnotherException.h
    exceptions/ShipNearAnotherException.cpp
    exceptions/BotException.h
    exceptions/BotException.cpp
    exceptions/ReaderException.h
    exceptions/ReaderException.cpp
    exceptions/UnknownCommandException.h
    exceptions/UnknownCommandException.cpp
    exceptions/ModifiedJsonException.h
    exceptions/ModifiedJsonException.cpp
    exceptions/UnableOpenFileException.h
    exceptions/UnableOpenFileException.cpp
    players/Player.h
    players/User.h
    players/User.cpp
    players/Bot.h
    players/Bot.cpp
    utils/Randomizer.cpp
    utils/Randomizer.h
    game/Game.h
    game/GameState.cpp
    game/GameState.h
    game/BotGame.cpp
    game/BotGame.h
    game/GameSaver.h
    game/GameSaver.cpp
    serialization/FileWrapper.h
    serialization/FileWrapper.cpp
    serialization/Serialization.h
    serialization/Serialization.cpp
    serialization/Deserialization.cpp
    serialization/Deserialization.cpp
    serialization/FileSettingsReader.h
    serialization/FileSettingsReader.cpp
    gameController/InputHandler.h
    gameController/InputHandler.cpp
    gameController/GameController.h
    displayer/ConsoleDisplayer.h
    displayer/ConsoleDisplayer.cpp
    displayer/Output.h
    Commands.h
    observer/Observer.h
    observer/Subject.h
    observer/Subject.cpp
    libs/json.hpp
)




